[project]
name = "gaze-experiment-fps"
version = "0.1.0"
description = "FPS Measuring Script"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mediapipe==0.10.9",
    "numpy>=2.2.6",
    "opencv-python>=4.12.0.88",
    "pandas>=2.3.2",
    "psutil>=7.1.0",
    "py-cpuinfo>=9.0.0",
    "scikit-learn>=1.7.1",
    "seaborn>=0.13.2",
    "torch>=2.7.1",
    "torchvision>=0.22.1",
]

[tool.pyright]
venvPath = "."
venv = ".venv"
